tests/mysql_insertion/deployment/deployment-patch.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: no-name
spec:
  template:
    spec:
      containers:
      - name: "mysql-insertion-deployment"
        imagePullPolicy: Always
