tests/mysql_insertion/deployment/mysql_deployment.yml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: mysql-pv-claim
  labels:
    app: mysql8
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi #1 GB
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: mysql-initdb-config
data:
  initdb.sql: |
    CREATE TABLE petdb.pet (Id INTEGER NOT NULL AUTO_INCREMENT, Name  VARCHAR(300), Category VARCHAR(300), Price INTEGER, PRIMARY KEY(Id));
    INSERT INTO friends VALUES ('John', 'Cat', 1000);
    INSERT INTO friends VALUES ('John', 'Dog', 2000);
    INSERT INTO friends VALUES ('Tommy', 'Dog', 1000);
    INSERT INTO friends VALUES ('Harry', 'Dog', 2000);
    INSERT INTO friends VALUES ('Benny', 'Cat', 1000);
    INSERT INTO friends VALUES ('Tigger', 'Cat', 2000);
    INSERT INTO friends VALUES ('Emma', 'Cat', 1000);
---
## Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql8
  strategy:
    type : Recreate
  template:
    metadata:
      labels:
        app: mysql8
    spec:
      containers:
        - name: mysql8
          image: mysql:8.0.22
          imagePullPolicy: Never
          env:
            - name: MYSQL_ROOT_PASSWORD
              value: Root0++
            - name: MYSQL_USER
              value: user
            - name: MYSQL_PASSWORD
              value: pass@word1234
            - name: MYSQL_DATABASE
              value: petdb
          args: ["--default-authentication-plugin=mysql_native_password"]
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-config
---
## Service
apiVersion: v1
kind: Service
metadata:
  name: mysql8-service
  labels:
    app: mysql8
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql8
---
